fix: actualizar dependencias para corregir vulnerabilidades y eliminar warnings - Next.js 14.2.33 - @supabase/ssr 0.7.0 - jspdf 3.0.3 - Node.js 20.18.1 - 0 vulnerabilidades

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "20.x"
+    "node": "20.18.1"
   },
   "scripts": {
     "dev": "next dev",
@@ -13,14 +13,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "@supabase/ssr": "^0.1.0",
+    "@supabase/ssr": "^0.7.0",
     "lucide-react": "^0.303.0",
-    "next": "14.0.4",
+    "next": "14.2.33",
     "openai": "^4.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.3",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
